Roster 1.9.9 beta: - Fixed notice in char-info when the main id doesn't exist for the alt/name portrait hover - Adjusted onclick tooltips showing to -5 instead of -30 - Hopefully fixed long lines not wrapping in IE on spellbooks -- http://www.wowroster.net/Forums/viewtopic/t=4209.html - Removed BOM character for some esES files -- I *should* have checked them before adding them to Roster - remove_guild_members() in update.lib.php will set the guild_id in the players table to 0 now -- This will fix the professions showing removed members issue as well -- http://www.wowroster.net/Forums/viewtopic/t=4198.html

--- a/addons/info/style.css
+++ b/addons/info/style.css
@@ -900,4 +900,4 @@
 /* Spell Icon */
 .spell_panel .info_container .icon { width:40px;height:40px; }
 /* Spell Icon text */
-.spell_panel .info_container .text { font:10px arial,helvetica,sans-serif;text-align:left;position:absolute;margin-top:4px;margin-left:4px; }
+.spell_panel .info_container .text { width:115px;font:10px arial,helvetica,sans-serif;text-align:left;position:absolute;margin-top:4px;margin-left:4px;white-space:normal; }
